@@ -18,6 +18,7 @@ Version 5.0.4
   Bug #26430 Will not install under Vista   
   Bug #25605 BINARY and VARBINARY is returned as a string 
   Bug #26152 Opening a connection is really slow 
+  Bug #24373 High CPU utilization when no idle connection 
 
   Other changes
   -------------
